--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </ul>
         </nav>
         <div class="center">
-        <img src="C:\Users\gunas\OneDrive\Attachments\Desktop\da1web\images\Screenshot 2025-01-18 215325.png">
+        <img src="Screenshot 2025-01-18 215325.png">
     
         <input type="text" value="build this webpage">
     </div>
